--- a/src/templates/mis_fotos.html
+++ b/src/templates/mis_fotos.html
@@ -1,5 +1,5 @@
 {% extends './menu.html' %}
-
+{% block title %}FOUTOS ART{% endblock %}
 {% block menu_bar  %}
 <link rel="stylesheet" href="{{url_for('static',filename ='misfotos.css')}}">
 {{super()}}
