--- a/src/templates/profile copy.html
+++ b/src/templates/profile copy.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
   
-{% block title %}Profile{% endblock %}
+{% block title %}FOUTOS ART{% endblock %}
   
 {% block content %}
 <h1>Profile Page</h1>
