--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -82,7 +82,7 @@
 
             </div>
             <div>
-                <a href="{{ url_for('config.confi') }}">configuracion</a>
+                <a href="{{ url_for('congif.configuracion') }}">configuracion</a>
 
             </div>
             <div>
