--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -36,7 +36,7 @@
         <div class="row main">
             <div class="main-login main-center">
                 <h5>Register </h5>
-                <form action="{{ url_for('register') }}" enctype="multipart/form-data"  method="post" autocomplete="off">
+                <form action="{{ url_for('register') }}" enctype="multipart/form-data"  method="POST" autocomplete="off">
                     <div class="form-group">
                         <label for="name" class="cols-sm-2 control-label">nombre</label>
                         <div class="cols-sm-10">
