--- a/src/templates/configuracion_usuario.html
+++ b/src/templates/configuracion_usuario.html
@@ -1,86 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<link rel="stylesheet" href="/css/profileEdit.css">
+<link rel="stylesheet" href="{{url_for('static',filename ='profileedit.css')}}">
+<div class="backGround" id="backGround"> 
+</div>
+<center>
+  <h1 class="title">Editar perfil</h1>
+</center>
 
-    
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{url_for('static',filename ='estilo.css')}}">
-    <title>FOUTOS ART</title>
-
-
-
-</head>
-<header>
-  {% extends './menu.html' %}
-  {% block menu_bar  %}
-  
-  {{super()}}
-</header>
-</head>
-<body>
-
-    <br>
-    <br>
-    <br>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          
-            
-              
-              <h1 class="pedo">AJUSTES</h1>
-              <br>
-              <ul class="navbar-nav mr-auto">
-                <hr class="hr1">
-                <li class="nav-item">
-                    <a class="nav-link" style="margin-top:-17px;height: 117px;font-size:50px;color:rgb(247, 247, 247);" href="{{ url_for('profile.profile') }}">Perfíl</a>
-                </li>
-                <hr class="hr2">
-              </ul>
-        </div>
-      
-
-
-        <div class="col" style="height: 350px;border-color: rgb(0, 0, 0);border-style: groove;margin: 20px;background-color:#00000070;">    
-
-          <div class="form-file">
-            <div class="form-file__action">
-              <label for="image" class="title"></label>
-  
-              <input type="file" name="image" id="image" />
-            </div>
-            <div class="form-file__result" id="result-image">
-              <img id="img-result" alt="" />
-            </div>
-          </div>
-        
-            
-          <button type="button" onclick="javascript:colocar_img()" class="btn btn-outline-primary subir">Subir Foto</button>
-            
-        </div>
-
-        <div class="col" style= "height: 350px;border-style: groove;margin: 20px;background-color:#000000bb;">
-
-          <form name="myForm" action="" method="post" onsubmit="return Comprobar()">
-            <br>
-             <h2  class="CampoForm">Nombre</h2><input type="text"  placeholder="Ingrese su nombre" maxlength="20" id="nombre" name="nombre"> <br> 
-                       <br>
-             <h2  class="CampoForm">Correo</h2><input type="email" placeholder="Email" id="email" name="email"> <br> 
-                         <br>
-            <input class="btn btn-outline-primary save" type="submit" class="button" name="enviar" value="Guardar">
-          </form>
-            </div>
+<div class="userPhoto">
+  <button type="" class="profileUser" id="lose-open">
+    <div class="photoIconPrimary">
+      <div class="photoIcon">
+        <img src="./static/img/todos/{{ account.imagen }}" id="imageview" alt="default img">
+      </div>
+      <div class="photoIcon Icon">
+        <img src="/img/user/Icon.png" alt="" height="200px" width="200px">
       </div>
     </div>
-    <script  src="{url_for('static',filename ='alertas_configuracion_usuarios.js')}}"></script>
-    <script  src="{url_for('static',filename ='almacenar_imagenes.js')}}"></script>
-    {% endblock  %}
-</body>
+  </button>
+</div>
+<!-- JavaScript Bundle with Popper 
+<form action="{{ url_for('congif.configuracion') }}" method="POST">
+  <div class="profileUser">
+    <div class="profileTwo " id="profileTwo">
+      <div class="changeImage">
+        <img src="./static/img/todos/{{ account.imagen }}" id="imagePreview" alt="default img">
+        <div class="changeImage">
+          <input type="file" name="photo" id="filePicker" class="inputfile" accept="image/*">
+          <label for="filePicker">Subir imagen</label>
+        </div>
+      </div>
+      <div class="buttonsView">
+        <div class="toEditTree">
+          <button id="editar" type="submit">Guardar</button>
+        </div>
+        
+</form>
+<div class="toEditTree">
+  <button id="cancel" type="button">Cancelar</button>
+</div>
+</div>
+</div>
+-->
+<form action="/configuracion" enctype="multipart/form-data" method="POST">
+  <div class="changeImage">
+    <input type="file" name="photo" id="filePicker" class="inputfile" accept="image/*">
+    <label for="filePicker">Subir imagen</label>
+  </div>
+  <table class="userData">
+    
+    <tr>
+      <td class="borderTableTitle">
+        <p>fullname</p>
+      </td>
+     
+      <td><input type="text" name="fullname" class="texting" value="{{ account.fullname}}"></td>
+    </tr>
+    
+    <tr>
+      <td class="borderTableTitle">
+        <p>Descripcion</p>
+      </td>
+      <td><input type="text" name="descripcion" class="texting" value="{{ account.descripcion }}"></td>
+    </tr>
+    <div class="toEditOne">
 
-</html>
+      
+      <center>
+        <button id="editar" type="submit">Guardar</button>
+    </div>
+</form>
+
+</table>
+</div>
+</div>
+</div>
+<script src="{{url_for('static',filename ='script/configuracion_usuario.js')}}"></script>
