--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -44,7 +44,7 @@
                    <h2> {{account['fullname']}}</h2>
                    
                 </div>
-                <div class="userimg"> <img src="./static/img/todos/{{ account.imagen }}"  alt=""  height="40px" width= "40px" id="close-open"></div>
+                <div class="userimg"> <img src="../static/img/todos/{{account.imagen}}"  alt=""  height="40px" width= "40px" id="close-open"></div>
 
 
 
