--- a/src/app/static/mostrar_foto.css
+++ b/src/app/static/mostrar_foto.css
@@ -1,3 +1,11 @@
+button {
+  
+  
+  border-style: none;
+  vertical-align: center;
+  text-align: center;
+  }
+
 h1 {
   color: white;
 }
@@ -9,7 +17,7 @@ p{
     grid-template-columns:70px 800px 1fr;
   }
   .imagen{
-    background-color: rgb(67, 67, 67);
+    background-color: #434343;
     height: 100%; 
     border-right: 3px rgb(255, 255, 255) solid;
     
@@ -61,5 +69,23 @@ p{
     
   }
   .comentario{
-    border-bottom: 3px white solid;
+    border-bottom: 2px rgb(111, 111, 111) solid;
   }
+  #coment{
+    padding-right: 40px;
+    vertical-align: middle;
+    background-color: rgb(0, 190, 41);
+    
+    height: 50px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+.text{
+text-align: left;
+padding-top: 3px;
+padding-left: 20px;
+border-bottom: 3px solid white;;
+}
