--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -47,22 +47,22 @@
 
             <div class="caruserl_lista">
                 <div class="carrusel_element">
-                    <img src="{{url_for('static',filename ='img/inicio/1.jpg')}}" alt="">
+                    <a href="/categoria">   <img src="{{url_for('static',filename ='img/inicio/1.jpg')}}" alt=""></a>
                 </div>
                 <div class="carrusel_element">
-                    <img src="{{url_for('static',filename ='img/inicio/5.png')}}" alt="">
-                </div>
-
-                <div class="carrusel_element">
-                    <img src="{{url_for('static',filename ='img/inicio/8.png')}}" alt="">
+                    <a href="/categoria">  <img src="{{url_for('static',filename ='img/inicio/5.png')}}" alt=""></a>
                 </div>
 
                 <div class="carrusel_element">
-                    <img src="{{url_for('static',filename ='img/inicio/7.png')}}" alt="">
+                    <a href="/categoria">  <img src="{{url_for('static',filename ='img/inicio/8.png')}}" alt=""></a>
                 </div>
 
                 <div class="carrusel_element">
-                    <img src="{{url_for('static',filename ='img/inicio/2.jpg')}}" alt="">
+                    <a href="/categoria/7">  <img src="{{url_for('static',filename ='img/inicio/7.png')}}" alt=""></a>
+                </div>
+
+                <div class="carrusel_element">
+                    <a href="/categoria/2">  <img src="{{url_for('static',filename ='img/inicio/2.jpg')}}" alt=""></a>
                 </div>
 
 
