--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -31,7 +31,7 @@
         <div class="central">
             <div>
                 
-                <button class="central_buton"> Trending</button>
+                <button class="central_buton" id ="pen-clo">Category</button>
                 
               
                 
@@ -55,26 +55,8 @@
                 <a href="">2D</a>
 
             </div>
-            <div>
-                <a href="">olio</a>
-
-            </div>
-            <div>
-                <a href="">3D</a>
-
-            </div>
-            <div>
-                <a href="">retrato</a>
-
-            </div>
-            <div>
-                <a href="">animales</a>
-
-            </div>
-            <div>
-                <a href="">Mitologia</a>
-
-            </div>
+           
+           
         </div>
         <div class="slider_two" id="closesecsion">
             <div>
