--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -72,7 +72,10 @@
          
             {%for id_foto in foto %}
             <div class="cont_img">
-                <img src="./static/img/todos/{{ id_foto.imagen }}" alt="">
+                <a href="/foto/{{id_foto.id_foto}}" class="cont_img"> <img src="./static/img/todos/{{ id_foto.imagen }}" alt="" id="pen"> </a>
+
+
+                
              </div> 
               
              {% endfor %}                                                
