--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -52,7 +52,28 @@
         
         <div class="slider_one" id="closesecsion_two">
             <div>
-                <a href="">2D</a>
+                <a href="/categoria/0">Personas</a>
+
+            </div>
+            <div>
+                <a href="/categoria/1">Cosas</a>
+
+            </div>
+            <div>
+                <a href="/categoria/2">AI</a>
+
+            </div>
+           
+            <div>
+                <a href="/categoria/3">Lugares</a>
+
+            </div>
+            <div>
+                <a href="/categoria/4">Animales</a>
+
+            </div>
+            <div>
+                <a href="/categoria/5">Dibujos</a>
 
             </div>
            
