--- a/src/templates/subir_imagen.html
+++ b/src/templates/subir_imagen.html
@@ -36,10 +36,24 @@
 				<input type="text" id="descripcion" class="field" name="descripcion" ></input> 
 				
 				<br><br>
+				<h1 style="font-size: 30px;">CATEGORIA</h1>
+
+				<select name="categoriaa">
+                    <option value="1">cosas</option>
+                    <option value="2">IA</option>
+                    <option value="3">Lugares</option>
+                    <option value="4">Animales</option>
+                    <option value="5">Dibujos</option>
+                    <option value="0">Personas</option>
+                 
+                </select>
+				<br><br>
 
 				<h1 style="font-size: 30px;">FOTOS</h1>
 
 				<br><br>
+
+
 
 				<div class="form-file">
 					<div class="form-file__action">
@@ -49,6 +63,7 @@
 					</div>
 					
 				</div>
+				
 				
 				
 				<br/>
