--- a/src/templates/mostrar_foto.html
+++ b/src/templates/mostrar_foto.html
@@ -58,7 +58,7 @@
                 
                 {%for id_comentario in comentarios %}
                 <div class="comentario">
-                    <p>{{id_comentario.texto}}</p>
+                    <textarea readonly>{{id_comentario.texto}}</textarea>
 
 
                 </div>
