--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -121,8 +121,13 @@
     <script  src="{url_for('static',filename ='inicion.js')}}"></script>
     <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
    
+
+    <footer>
+        <h4>INSTITUTO YAVIRACK</h4>
+    </footer>
    {% endblock  %}
 </body>
+
 <br>
 <br>
 <br>
