--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -39,13 +39,31 @@
         </div>
         
             <div class="login" >
-              
-                <div>
-                   <h2> {{account['fullname']}}</h2>
-                   
-                </div>
-                <div class="userimg"> <img src="../static/img/todos/{{account.imagen}}"  alt=""  height="40px" width= "40px" id="close-open"></div>
+            {% if account == "NULL"  %}
 
+            <div class ="inicio_registro" >
+                <div class="login">
+                <a href="/login">Login</a>
+                </div>
+                <div class="register ">
+                <a href="/register">Register</a>
+                </div>
+                
+             </div>
+           
+
+            {% else %}
+            <div>
+                <h2> {{account['fullname']}}</h2>
+                
+             </div>
+             <div class="userimg"> <img src="../static/img/todos/{{account.imagen}}"  alt=""  height="40px" width= "40px" id="close-open"></div>
+        
+         
+            {% endif %}
+
+        
+            
 
 
             </div>
@@ -106,6 +124,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="{{url_for('static',filename ='script/inicion.js')}}"></script>
+    
     {% endblock  %}
 </header>
 
